--- a/projects/lego_pulley.html
+++ b/projects/lego_pulley.html
@@ -25,6 +25,7 @@
 					<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
 					<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
 					<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+					<a href="https://grabcad.com/yufeng.wu-4" target="blank"><img src="/documents/icons/GrabCAD.png"></a>
 				</div>
       </div>
 		</div>
@@ -59,10 +60,33 @@
 			<h2 class="centered">Educational Pulley System</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
 			<!--<p class="date">March 2019 - May 2019</p>-->
-			<p class="main_content"><a href="https://yufengericwu.myportfolio.com/lego-mindstorms-pulley-system" target="_blank">https://yufengericwu.myportfolio.com/lego-mindstorms-pulley-system</a></p>
+			<p class="main_content">This is a customizable, interactive pulley system that can be used in various classroom settings to help students learn basic physics concepts. The entire set up can be created using parts from a LEGO Mindstorms EV3 kit, some strings and any kinds of weight. Alternatively, as provided by this document, using 3D-printed parts can further enhance the performance of the pulley system.</p>
+			
+			<p class="main_content">I also created a detailed PDF documentation for anyone who would like to integrate the system into the classroom. Link <a href="https://drive.google.com/file/d/1QLN-nJjo_NyNcNiJ_XuT6CYnJhveujBT/view" target="_blank">here</a></p>
+			
+			<div class="row_lightbox">
+				<div class="column_lightbox">
+					<img src="/documents/projects/lego_pulley/1.png" onclick="openModal();currentSlide(1)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/lego_pulley/2.png" onclick="openModal();currentSlide(2)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/lego_pulley/3.png" onclick="openModal();currentSlide(3)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/lego_pulley/4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/lego_pulley/5.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/lego_pulley/6.png" onclick="openModal();currentSlide(6)" class="hover-shadow">
+				</div>	
+			</div>
 		</div>
 
-	
+		
 		
 		
 		
@@ -87,23 +111,24 @@
 				<div class="modal-content">
 
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG">
+						<img src="/documents/projects/lego_pulley/1.png">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG">
+						<img src="/documents/projects/lego_pulley/2.png">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG">
+						<img src="/documents/projects/lego_pulley/3.png">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG">
-					</div>			
-					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG">
-					</div>				
-					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg">
+						<img src="/documents/projects/lego_pulley/4.jpg">
 					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/lego_pulley/5.jpg">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/lego_pulley/6.png">
+					</div>
+					
 					<!-- Next/previous controls -->
 					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 					<a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -124,6 +149,7 @@
 				<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
 				<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
 				<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+				<a href="https://grabcad.com/yufeng.wu-4" target="blank"><img src="/documents/icons/GrabCAD.png"></a>
 			</div>
     </div>
   </footer>
