--- a/projects/lego_sec.html
+++ b/projects/lego_sec.html
@@ -25,6 +25,7 @@
 					<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
 					<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
 					<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+					<a href="https://grabcad.com/yufeng.wu-4" target="blank"><img src="/documents/icons/GrabCAD.png"></a>
 				</div>
       </div>
 		</div>
@@ -47,19 +48,36 @@
 		<div class="container">
 			<br>
 			<div class="prev_button">
-				<a class="prev_page" href="lego_pulley.html"><p>&lt;&lt; Prev: LEGO SPIKE Prime Backpacks</p></a>
+				<a class="prev_page" href="lego_pulley.html"><p>&lt;&lt; Prev: Educational Pulley System</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href="lego_placemat.html"><p>Next: LEGO SEC at Tufts &gt;&gt;</p></a>
+				<a class="next_page" href="lego_placemat.html"><p>Next: LEGO Placemat Instruction &gt;&gt;</p></a>
 			</div>
 		</div>
 		
 	
 		<div class="container">
-			<h2 class="centered">Educational Pulley System</h2>
+			<h2 class="centered">LEGO SEC at Tufts</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
 			<!--<p class="date">March 2019 - May 2019</p>-->
+			<p class="main_content">This Advanced LEGO model features is a model of the Science and Engineering Complex (SEC) at Tufts University. I first designed this model in Stud.io , a LEGO CAD software (I had limited access to the building dimensions; basically Google Maps and pictures I took were what I had). After that, all the pieces were bought and assembled together. </p>
+			<p class="main_content">The model was presented to the dean of the School of Engineering at Tufts as a gift from Tufts Center for Engineering Education and Outreach (CEEO). It went viral through the school's Facebook and Twitter post, and It also got featured as fornt cover on the Tufts Mechanical Engineering Department Annual Report.</p>
 			<p class="main_content"><a href="https://yufengericwu.myportfolio.com/lego-mindstorms-pulley-system" target="_blank">https://yufengericwu.myportfolio.com/lego-mindstorms-pulley-system</a></p>
+			
+			<div class="row_lightbox">
+				<div class="column_lightbox">
+					<img src="/documents/projects/lego_sec/1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/lego_sec/2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/lego_sec/3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/lego_sec/4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+				</div>
+			</div>
 		</div>
 
 	
@@ -70,10 +88,10 @@
 		<div class="container">
 			<br>
 			<div class="prev_button">
-				<a class="prev_page" href="lego_pulley.html"><p>&lt;&lt; Prev: LEGO SEC at Tufts</p></a>
+				<a class="prev_page" href="lego_pulley.html"><p>&lt;&lt; Prev: Educational Pulley System</p></a>
 			</div>
 			<div class="next_button">
-				<a class="next_page" href="lego_placemat.html"><p>Next: LEGO SEC at Tufts&gt;&gt;</p></a>
+				<a class="next_page" href="lego_placemat.html"><p>Next: LEGO Placemat Instruction &gt;&gt;</p></a>
 			</div>
 		</div>
 		
@@ -87,23 +105,18 @@
 				<div class="modal-content">
 
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG">
+						<img src="/documents/projects/lego_sec/1.jpg">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG">
+						<img src="/documents/projects/lego_sec/2.jpg">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG">
+						<img src="/documents/projects/lego_sec/3.jpg">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG">
-					</div>			
-					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG">
-					</div>				
-					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg">
+						<img src="/documents/projects/lego_sec/4.jpg">
 					</div>
+					
 					<!-- Next/previous controls -->
 					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 					<a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -124,6 +137,7 @@
 				<a href="https://www.facebook.com/profile.php?id=100008802941721" target="blank"><img src="/documents/icons/Facebook.png"></a>
 				<a href="https://github.com/EricYufengWu" target="blank"><img src="/documents/icons/Github.png"></a>
 				<a href="https://www.linkedin.com/in/yufeng-eric-wu/" target="blank"><img src="/documents/icons/Linkedin.png"></a>
+				<a href="https://grabcad.com/yufeng.wu-4" target="blank"><img src="/documents/icons/GrabCAD.png"></a>
 			</div>
     </div>
   </footer>
