--- a/art/art.html
+++ b/art/art.html
@@ -70,7 +70,7 @@
         <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="reflection.html"><img src="../documents/art/thumbnails/digi_reflection.JPG" alt="reflection" class="thumbnail"></a>
+						<a href="reflection.html"><img src="../documents/art/thumbnails/digi_reflection.png" alt="reflection" class="thumbnail"></a>
             <div class="title">
             </div>
           </div> 
