--- a/art/giftbox.html
+++ b/art/giftbox.html
@@ -63,29 +63,40 @@
 			<p class="main_content"><b>"Something useless, but perhapse a bit more interesting"</b> - 20 laser-cutted keychains with 20 of her favorite things engraved on top.</p>
 			<p class="main_content">The entire project was designed in Adobe Illustrator from scratch and fabricated with a lasercutter under 10 hours.</p>
 			
-			<div class="single"><img src="/documents/projects/robotics_trinity_2019/render_1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow"></div>
-			<p class="img_caption">Add caption here?</p>
-			
 			<br>
+			
+			<div class="row_lightbox">
+				<div class="column_lightbox">
+					<img src="/documents/art/digi_giftbox/detail1.JPEG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/art/digi_giftbox/detail2.JPEG" onclick="openModal();currentSlide(2)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/art/digi_giftbox/detail3.JPEG" onclick="openModal();currentSlide(3)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/art/digi_giftbox/detail4.JPEG" onclick="openModal();currentSlide(4)" class="hover-shadow">
+				</div>
+			</div>
+			
 			<h3>Building Process</h3>
 			<div class="row_lightbox">
 				<div class="column_lightbox">
-					<img src="/documents/projects/robotics_trinity_2019/detail_1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/art/digi_giftbox/working1.JPEG" onclick="openModal();currentSlide(5)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/robotics_trinity_2019/detail_2.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/art/digi_giftbox/working2.JPEG" onclick="openModal();currentSlide(6)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/robotics_trinity_2019/detail_3.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/art/digi_giftbox/working3.JPEG" onclick="openModal();currentSlide(7)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/robotics_trinity_2019/detail_4.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/art/digi_giftbox/working4.JPEG" onclick="openModal();currentSlide(8)" class="hover-shadow">
 				</div>
 			</div>
-			<p class="main_content">I designed the base layer of the robot, which hosts a raspberry pi, an Arduino Mega, all the batteries, and the motors. I used stand-offs and zip ties to secure all the components from shifting during the robot's movement. </p>
-			
 		</div>
-
+		
 		
 		
 		
