--- a/art/reflection.html
+++ b/art/reflection.html
@@ -32,9 +32,9 @@
         <ul>
           <li><a href="../index.html">About</a></li>
           <li><a href="/Eric%20Yufeng%20Wu%20Resume.pdf" target="blank">Resume</a></li>
-          <li class="current"><a href="../projects/projects.html">Projects</a></li>
+          <li><a href="../projects/projects.html">Projects</a></li>
           <!-- <li><a href="../research/research.html">Research</a></li> -->
-          <li><a href="../art/art.html">Art &amp; Design</a></li>
+          <li class="current"><a href="../art/art.html">Art &amp; Design</a></li>
           <li><a href="../cardistry.html">Cardistry</a></li>
         </ul>
       </nav>
