--- a/art/giftbox.html
+++ b/art/giftbox.html
@@ -120,22 +120,28 @@
 				<div class="modal-content">
 
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG">
+						<img src="/documents/art/digi_giftbox/detail1.JPEG">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG">
+						<img src="/documents/art/digi_giftbox/detail2.JPEG">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG">
+						<img src="/documents/art/digi_giftbox/detail3.JPEG">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG">
-					</div>			
+						<img src="/documents/art/digi_giftbox/detail4.JPEG">
+					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG">
-					</div>				
+						<img src="/documents/art/digi_giftbox/working1.JPEG">
+					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg">
+						<img src="/documents/art/digi_giftbox/working2.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/art/digi_giftbox/working3.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/art/digi_giftbox/working4.JPEG">
 					</div>
 					<!-- Next/previous controls -->
 					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
