--- a/projects/projects.html
+++ b/projects/projects.html
@@ -219,7 +219,7 @@
 				<!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="lego_coaster.html"><img src="../documents/projects/thumbnails/lego_coaster.png" alt="IoT Roller Coaster" class="thumbnail"></a>
+						<a><img src="../documents/projects/thumbnails/lego_coaster.png" alt="IoT Roller Coaster" class="thumbnail"></a>
             <div class="title">
                 <p><a href="lego_coaster.html">IoT Roller Coaster</a></p>
             </div>
@@ -228,7 +228,7 @@
 				<!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="lego_tutorial.html"><img src="../documents/projects/thumbnails/lego_tutorials.png" alt="EV3 Tutorial" class="thumbnail"></a>
+						<a><img src="../documents/projects/thumbnails/lego_tutorials.png" alt="EV3 Tutorial" class="thumbnail"></a>
             <div class="title">
                 <p><a href="lego_tutorial.html">EV3 Building Tutorial</a></p>
             </div>
@@ -237,7 +237,7 @@
 				<!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="lego_staircase.html"><img src="../documents/projects/thumbnails/lego_staircase.png" alt="LEGO Staircase" class="thumbnail"></a>
+						<a><img src="../documents/projects/thumbnails/lego_staircase.png" alt="LEGO Staircase" class="thumbnail"></a>
             <div class="title">
                 <p><a href="hexapod_prototypes.html">LEGO Staircase</a></p>
             </div>
