--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 	<script type="text/javascript" src="./javascript/jquery-3.4.1.js"></script>
 	
   <script>
-  	alert('Please turn off your Adblocker, as it might prevent some content to show up. I promise that there\'s no Ads here :P');
+  	alert('Adblockers might prevent some content from showing up :P');
 	</script>
 	
 	<div id="wrapfabtest">
