--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="container">
 
 
-      <p id="intro"><img id="profilepic" src="./documents/about/profilepic.jpg" alt="what I look like">Hi! My name is Yufeng (Eric) Wu, and I am currently a Junior at Tufts University at Medford, MA. I am studying in mechanical engineering with a minor in studio art. <br>
-      This website contains several sections that collectively define who I am. It is still under construction, as I am still refining some documentations of my previous and current projects. If you have any further questions, please feel free to contact me at: <br>yufeng.wu@tufts.edu or 857-869-3542.</p>
+      <p id="intro"><img id="profilepic" src="./documents/about/profilepic.jpg" alt="what I look like"><br>Hi! My name is Yufeng (Eric) Wu, and I am currently a Junior at Tufts University at Medford, MA. I am studying in mechanical engineering with a minor in studio art. <br><br>
+      This website contains several sections that collectively define who I am, and I will be constantly updating it and adding newer projects. If you have any further questions, please feel free to contact me.</p>
 			
 
     </div>
