--- a/projects/lego_backpacks.html
+++ b/projects/lego_backpacks.html
@@ -158,12 +158,13 @@
 				<div class="column_lightbox">
 					<img src="/documents/projects/lego_backpack/more_2.JPEG" onclick="openModal();currentSlide(14)" class="hover-shadow">
 				</div>
+				<!---
 				<div class="column_lightbox">
 					<img src="/documents/projects/lego_backpack/more_3.JPEG" onclick="openModal();currentSlide(15)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
 					<img src="/documents/projects/lego_backpack/more_4.jpg" onclick="openModal();currentSlide(16)" class="hover-shadow">
-				</div>
+				</div>--->
 				<div class="column_lightbox">
 					<img src="/documents/projects/lego_backpack/more_5.JPEG" onclick="openModal();currentSlide(17)" class="hover-shadow">
 				</div>
