--- a/index.html
+++ b/index.html
@@ -64,9 +64,18 @@
     <div class="container">
       
       <!-- Full-width images with number text -->
-      <div class="mySlides">
+			<div class="mySlides">
         <div class="numbertext">1 / 6</div>
-        <a href="/projects/hexapod_h2.html"><img src="./documents/about/Featuring_1.JPEG" style="width:100%"></a>
+        <a href="/projects/hexapod_halloween.html"><img src="./documents/about/Featuring_1.JPEG" style="width:100%"></a>
+        <div class="imgcontent">
+          <h1>Hexapod - Halloween Edition</h1>
+          <p class="showcasetext">To bring the holiday atmsphere to the university makerspace, I built a hexapod walking robot that has a full color wheel and is able to retract automatically into a cute pumpkin.&nbsp <a class="showcaselink" href=" /projects/hexapod_halloween.html">Learn more</a></p>
+        </div>
+      </div> 
+			
+      <div class="mySlides">
+        <div class="numbertext">2 / 6</div>
+        <a href="/projects/hexapod_h2.html"><img src="./documents/about/Featuring_2.JPEG" style="width:100%"></a>
         <div class="imgcontent">
           <h1>Hexapods</h1>
           <p class="showcasetext">Starting in my Sophomore Spring, I am building a series of hexapods from scratch. Right now I have built and tested 4 of them, and the number will continue to grow as I keep making improvements on all aspects.&nbsp<a class="showcaselink" href=" /projects/hexapod_h2.html">Learn more</a></p>
@@ -74,8 +83,8 @@
       </div> 
 
       <div class="mySlides">
-        <div class="numbertext">2 / 6</div>
-        <a href="/projects/lego_backpacks.html"><img src="./documents/about/Featuring_2.JPG" style="width:100%"></a>
+        <div class="numbertext">3 / 6</div>
+        <a href="/projects/lego_backpacks.html"><img src="./documents/about/Featuring_3.JPG" style="width:100%"></a>
         <div class="imgcontent">
           <h1>LEGO Spike Prime Backpack</h1>
           <p class="showcasetext">As an intern in Tufts Center for Engineering Education and Outreach (CEEO), I designed PCBs and 3D-printed housings that combine 3rd-party devices with the new LEGO robotics education kit.&nbsp<a class="showcaselink" href="/projects/lego_backpacks.html">Learn more</a></p>
@@ -83,8 +92,8 @@
       </div> 
 
       <div class="mySlides">
-        <div class="numbertext">3 / 6</div>
-        <a href="/projects/engineering_ceramics_printer.html"><img src="./documents/about/Featuring_3.jpeg" style="width:100%"></a>
+        <div class="numbertext">4 / 6</div>
+        <a href="/projects/engineering_ceramics_printer.html"><img src="./documents/about/Featuring_4.jpeg" style="width:100%"></a>
         <div class="imgcontent">
           <h1>Delta Ceramics 3D-Printer</h1>
           <p class="showcasetext">With a professor in Tufts Sculpture department, I built a delta-style 3D-printer dedicated for ceramics (clay) printing. We adopted a design online and built our own version with improvements.&nbsp<a class="showcaselink" href="/projects/engineering_ceramics_printer.html">Learn more</a></p>
@@ -128,10 +137,13 @@
           <img class="demo cursor" src="./documents/about/Featuring_1.JPEG" style="width:100%" onclick="currentSlide(1)" alt="Featuring_1">
         </div>
         <div class="column">
-          <img class="demo cursor" src="./documents/about/Featuring_2.JPG" style="width:100%" onclick="currentSlide(2)" alt="Featuring_2">
+          <img class="demo cursor" src="./documents/about/Featuring_2.JPEG" style="width:100%" onclick="currentSlide(2)" alt="Featuring_2">
         </div>
         <div class="column">
-          <img class="demo cursor" src="./documents/about/Featuring_3.jpeg" style="width:100%" onclick="currentSlide(3)" alt="Featuring_3">
+          <img class="demo cursor" src="./documents/about/Featuring_3.JPG" style="width:100%" onclick="currentSlide(3)" alt="Featuring_3">
+        </div>
+				<div class="column">
+          <img class="demo cursor" src="./documents/about/Featuring_4.jpeg" style="width:100%" onclick="currentSlide(4)" alt="Featuring_3">
         </div>
 				<!--
         <div class="column">
