--- a/projects/hexapod_h2.html
+++ b/projects/hexapod_h2.html
@@ -46,7 +46,7 @@
 		<div class="container">
 			<br>
 			<div class="prev_button">
-				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
+				<a class="prev_page" href="hexapod_halloween.html"><p>&lt;&lt; Prev: Hexapod Halloween Edition</p></a>
 			</div>
 			<div class="next_button">
 				<a class="next_page" href="hexapod_h1mini.html"><p>Next: H1 Mini &gt;&gt;</p></a>
@@ -140,7 +140,7 @@
 		<div class="container">
 			<br>
 			<div class="prev_button">
-				<a class="prev_page" href=""><p>&lt;&lt; Prev:</p></a>
+				<a class="prev_page" href="hexapod_halloween.html"><p>&lt;&lt; Prev: Hexapod Halloween Edition</p></a>
 			</div>
 			<div class="next_button">
 				<a class="next_page" href="hexapod_h1mini.html"><p>Next: H1 Mini &gt;&gt;</p></a>
