--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <a href="/projects/hexapod_halloween.html"><img src="./documents/about/Featuring_1.JPEG" style="width:100%"></a>
         <div class="imgcontent">
           <h1>Hexapod - Halloween Edition</h1>
-          <p class="showcasetext">To bring the holiday atmasphere to the university makerspace, I built a hexapod walking robot that is able to retract automatically into a cute pumpkin.&nbsp <a class="showcaselink" href=" /projects/hexapod_halloween.html">Learn more</a></p>
+          <p class="showcasetext">To bring the holiday atmosphere to the university makerspace, I built a hexapod walking robot that is able to retract automatically into a cute pumpkin.&nbsp <a class="showcaselink" href=" /projects/hexapod_halloween.html">Learn more</a></p>
         </div>
       </div> 
 			
