--- a/projects/hexapod_halloween.html
+++ b/projects/hexapod_halloween.html
@@ -55,7 +55,7 @@
 		
 	
 		<div class="container">
-			<h2 class="centered">Hexapod Halloween Edition</h2>
+			<h2 class="centered">Hexapod Pumpkin Transformer</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
 			<p class="date">October 2019</p>
 			<p class="main_content">This Halloween, I built a hexapod pumpkin transformer to enter the annual Halloween Showcase at Tufts University Nolop Makerspace. I was partially inspired by a static, retractable spider pumpkin <a href="https://www.thingiverse.com/thing:3129886" target="_blank">link here</a> and decided to build a motorized version myself. I based the inner design on my previous <a href="hexapod_h2.html">hexapod builds</a>, re-designed most of the outer structure, and put everything together in two weeks.</p>
@@ -65,7 +65,7 @@
 					<img src="/documents/projects/hexapod_halloween/retract.gif" onclick="openModal();currentSlide(1)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/showcase.gif" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/showcase.gif" onclick="openModal();currentSlide(2)" class="hover-shadow">
 				</div>
 			</div>
 			<p class="img_caption">Robot in Action During Showcase</p>
@@ -75,16 +75,16 @@
 			<p class="main_content">The outer structure of the pumpkin consists of 6 "pumpkin slices", each controlled by 3 micro-servos, and can seamlessly retract to the shape of a pumpkin. The entire structure is designed by me and 3d-printed in the university makerspace - including the transparent eye covers, which are printed on a Form 2 SLA printer.</p>
 			<div class="row_lightbox">
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/detail1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/detail1.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/detail2.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/detail2.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/detail3.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/detail3.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/detail4.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/detail4.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
 				</div>
 			</div>
 			<br>
@@ -95,10 +95,10 @@
 			<p class="main_content">I started the building process by sketching on my ipad. After some preliminary brainstorming I moved to SolidWorks and started modeling a pumpkin based on my sketches. I then incorporated the inner structures, put everything inside the assembly, and went back-and-forth between the pumpkin slices and the assembly model to ensure a working retraction system. The complete CAD model can be found on <a href="https://grabcad.com/library/pumpkin-hexapod-1" target="_blank">GrabCAD</a>. </p>
 			<div class="row_lightbox">
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/sketch.png" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/sketch.png" onclick="openModal();currentSlide(7)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/render_1.JPG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/render_1.JPG" onclick="openModal();currentSlide(8)" class="hover-shadow">
 				</div>
 			</div>
 			<br>
@@ -106,22 +106,22 @@
 			<p class="main_content"> I also designed a printed circuit board, which iconnects my micro-controller (Adafruit Feather Hazzah) to the servo driver boards. I also put in special consideration to the user-friendliness by putting the "masterswitch" of the robot on top of the stem of the robot. This is a perfect place for the switch as it is easiy reachable and does not affect the overall look of the robot. </p>
 			<div class="row_lightbox">
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/3dprinting_1.JPEG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/3dprinting_1.JPEG" onclick="openModal();currentSlide(9)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/pcb1.JPEG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/pcb1.JPEG" onclick="openModal();currentSlide(10)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/assembly1.JPEG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/assembly1.JPEG" onclick="openModal();currentSlide(11)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/assembly1.gif" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/assembly1.gif" onclick="openModal();currentSlide(12)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/testing_1.JPEG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/testing_1.JPEG" onclick="openModal();currentSlide(13)" class="hover-shadow">
 				</div>
 				<div class="column_lightbox">
-					<img src="/documents/projects/hexapod_halloween/testing_2.JPEG" onclick="openModal();currentSlide(1)" class="hover-shadow">
+					<img src="/documents/projects/hexapod_halloween/testing_2.JPEG" onclick="openModal();currentSlide(14)" class="hover-shadow">
 				</div>
 			</div>
 			
@@ -153,22 +153,46 @@
 				<div class="modal-content">
 
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG">
+						<img src="/documents/projects/hexapod_halloween/retract.gif">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG">
+						<img src="/documents/projects/hexapod_halloween/showcase.gif">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG">
+						<img src="/documents/projects/hexapod_halloween/detail1.jpg">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG">
-					</div>			
+						<img src="/documents/projects/hexapod_halloween/detail2.jpg">
+					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG">
-					</div>				
+						<img src="/documents/projects/hexapod_halloween/detail3.jpg">
+					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg">
+						<img src="/documents/projects/hexapod_halloween/detail4.jpg">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_halloween/sketch.png">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_halloween/render_1.JPG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_halloween/3dprinting_1.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_halloween/pcb1.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_halloween/assembly1.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_halloween/assembly1.gif">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_halloween/testing_1.JPEG">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/hexapod_halloween/testing_2.JPEG"ss>
 					</div>
 					<!-- Next/previous controls -->
 					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
