--- a/projects/projects.html
+++ b/projects/projects.html
@@ -138,6 +138,15 @@
     <div class="container">
       <div class="projectSections">
         <h2>Hexapods!</h2>
+				<div class="itembox">
+          <div class="itemprofile">
+						<a href="hexapod_halloween.html"><img src="../documents/projects/thumbnails/hexapod_halloween.JPEG" alt="Hexapod H2" class="thumbnail"></a>
+            <div class="title">
+                <p><a href="hexapod_h2.html">H2 Pumpkin Tranksformer</a></p>
+            </div>
+          </div> 
+        </div>
+        <!--  --> 
         <div class="itembox">
           <div class="itemprofile">
 						<a href="hexapod_h2.html"><img src="../documents/projects/thumbnails/hexapod_h2.JPEG" alt="Hexapod H2" class="thumbnail"></a>
