--- a/projects/projects.html
+++ b/projects/projects.html
@@ -358,6 +358,15 @@
   
   
   <script type="text/javascript" src="../javascript/project.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-S6XL3XXSRT"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-S6XL3XXSRT');
+	</script>
   
 </body>
     
