--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
       <div class="mySlides">
         <div class="numbertext">4 / 6</div>
-        <a href="/projects/engineering_ceramics_printer.html"><img src="./documents/about/Featuring_4.jpeg" style="width:100%"></a>
+        <a href="/projects/engineering_ceramics_printer.html"><img src="./documents/about/Featuring_4.jpg" style="width:100%"></a>
         <div class="imgcontent">
           <h1>Delta Ceramics 3D-Printer</h1>
           <p class="showcasetext">With a professor in Tufts Sculpture department, I built a delta-style 3D-printer dedicated for ceramics (clay) printing. We adopted a design online and built our own version with improvements.&nbsp<a class="showcaselink" href="/projects/engineering_ceramics_printer.html">Learn more</a></p>
@@ -143,7 +143,7 @@
           <img class="demo cursor" src="./documents/about/Featuring_3.JPG" style="width:100%" onclick="currentSlide(3)" alt="Featuring_3">
         </div>
 				<div class="column">
-          <img class="demo cursor" src="./documents/about/Featuring_4.jpeg" style="width:100%" onclick="currentSlide(4)" alt="Featuring_3">
+          <img class="demo cursor" src="./documents/about/Featuring_4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Featuring_3">
         </div>
 				<!--
         <div class="column">
