--- a/projects/projects.html
+++ b/projects/projects.html
@@ -65,7 +65,7 @@
         <!--  -->  
         <div class="itembox">
           <div class="itemprofile">
-						<a href="engineering_ceramics_printer.html"><img src="../documents/projects/thumbnails/enineering_ceramics_printer.jpeg" alt="Ceramics 3D Printer" class="thumbnail"></a>
+						<a href="engineering_ceramics_printer.html"><img src="../documents/projects/thumbnails/engineering_ceramics_printer.jpg" alt="Ceramics 3D Printer" class="thumbnail"></a>
             <div class="title">
                 <p><a href="engineering_ceramics_printer.html">Ceramics 3D-Printer</a></p>
             </div>
