--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://www.yufengwu.com">
     <title>Redirecting...</title>
+    <script type="text/javascript">
+        window.location.href = "https://www.yufengwu.com";
+    </script>
 </head>
 <body>
     <p>If you are not redirected automatically, follow this <a href="https://www.yufengwu.com">link to yufengwu.com</a>.</p>
